--- a/app/views/main/_left_mypage_menu.html.erb
+++ b/app/views/main/_left_mypage_menu.html.erb
@@ -24,23 +24,18 @@
 
     <div class="menu_item">
         <div class="row">
-            <div class="col-md-8"><%= image_tag "mypage/like.png" %> Liked</div>
-        </div>
-    </div>
-    <div class="menu_item">
-        <div class="row">
-            <div class="col-md-8"><%= image_tag "main/hover_add.png" %> Added</div>
-        </div>
-    </div>
-    <div class="menu_item">
-        <div class="row">
-            <div class="col-md-8"><%= image_tag "mypage/later.png" %> Later</div>
+            <a href="/main/mypage"><div class="col-md-8"><%= image_tag "mypage/like.png" %> Liked</div></a>
         </div>
     </div>
     <div class="menu_item">
         <div class="row">
             <div class="col-md-8"><%= image_tag "mypage/collection.png" %> Collection</div>
         </div>
-    </div>
+    </div>    
+    <div class="menu_item">
+        <div class="row">
+            <div class="col-md-8"><%= image_tag "mypage/later.png" %> Later</div>
+        </div>
+    </div>    
 </div>
 <% end %>
