--- a/app/views/main/_video_card.html.erb
+++ b/app/views/main/_video_card.html.erb
@@ -14,7 +14,7 @@
 				<div class="btnLike" data-video-id="{{id}}">
 					<%= image_tag "main/hover_like.png" %> Like
 				</div>
-				<div class="btnAdd">
+				<div class="btnAdd" data-toggle="modal" data-target="#collectionModal">
 					<%= image_tag "main/hover_add.png" %> Add
 				</div>
 				<div class="btnLater">
