--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -16,6 +16,7 @@
     </div>    
 
     <%= render 'video_dialog' %>
+    <%= render 'add_collection_dialog' %>
 
     <%= render 'login_dialog' %>
     <%= render 'signup_dialog' %>
