--- a/app/views/main/_left_mypage_menu.html.erb
+++ b/app/views/main/_left_mypage_menu.html.erb
@@ -19,7 +19,7 @@
 
     <div class="menu_profile row">
     	<%= image_tag("main/profile_none.png") %>
-    	<div class="pname">Sole Lee</div>
+    	<div class="pname"><%= current_user.email %></div>
     </div>
 
     <div class="menu_item">
