--- a/app/views/main/_left_mypage_menu.html.erb
+++ b/app/views/main/_left_mypage_menu.html.erb
@@ -20,6 +20,7 @@
     <div class="menu_profile row">
     	<%= image_tag("main/profile_none.png") %>
     	<div class="pname"><%= current_user.email %></div>
+        <!-- <div class="btnEditProfile" data-toggle="modal" data-target="#editprofileModal" class="hook--showmodal">Edit Profile</div> -->
     </div>
 
     <div class="menu_item">
