--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -20,6 +20,7 @@
 
     <%= render 'login_dialog' %>
     <%= render 'signup_dialog' %>
+    <%= render 'edit_profile_dialog' %>
 
     <div id="main-content">
       <div class="top_bar">        
