--- a/app/views/main/_edit_profile_dialog.html.erb
+++ b/app/views/main/_edit_profile_dialog.html.erb
@@ -1,14 +1,14 @@
-<div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModal" aria-hidden="true">
+<div class="modal fade" id="editprofileModal" tabindex="-1" role="dialog" aria-labelledby="editprofileModal" aria-hidden="true">
   <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body container-fluid">
 
         	<div class="row">
-	          <div class="dialog-title">Sign up</div>
+	          <div class="dialog-title">Edit Profile</div>
 	          <%= image_tag "login/close.png", :class => "close", :data => {:dismiss=>"modal"} %>
 	        </div>        		 
 
-			<div class="field">          
+  			<div class="field">          
           		<input id="ipEmail" type="text" placeholder="E-mail Address" class="form-control" autofocus> 
         	</div>
 
@@ -20,13 +20,13 @@
         		<input id="ipPasswordConfirm" type="password" placeholder="Password Confirmation" class="form-control">
         	</div>
 
-        	<div class="actions">
-        		<div id="btnSignup"><%=image_tag "login/btnsignup.png" %></div>
-        	</div>
+          <div class="field">
+            <input id="ipCurrentPassword" type="password" placeholder="New Password" class="form-control">
+          </div>
 
-			<div class="links">				
-				<div id="link_login">Log in</div>
-			</div>
+        	<div class="actions">
+        		<div id="btnUpdate">Update</div>
+        	</div>			
 		</div>
     </div>
   </div>
