--- a/app/views/main/_collection_list_handlebar.html
+++ b/app/views/main/_collection_list_handlebar.html
@@ -1,3 +1,5 @@
 <script id="collection_list_template" type="x-handlebars-template">
-	
+	// {{#each collections}}
+		<%= render 'collection_list' %>
+	// {{/each}}	
 </script>
