--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -82,3 +82,4 @@
 
 <%= render partial: "video_card_handlebar"%>
 <%= render partial: "video_list_handlebar"%>
+<%= render partial: "collection_list_handlebar"%>
