--- a/app/views/main/_add_collection_dialog.html.erb
+++ b/app/views/main/_add_collection_dialog.html.erb
@@ -4,11 +4,23 @@
         <div class="modal-body container-fluid">
 
         <div class="row">
-          <div class="dialog-title">Add Collection</div>
+          <div class="dialog-title">Add to collections</div>
           <%= image_tag "login/close.png", :class => "close", :data => {:dismiss=>"modal"} %>
         </div>     
+
+        <div class="field">
+          <input id="ipCreateCol" type="text" placeholder="Create a new collection" class="form-control" autofocus>
+          <button id="btnAdd">Add</button>                  
+        </div>
+
+        <div class="field">
+          <%= select_tag(
+              :collection, options_for_select(@current_user_collections), class: "add-collection"
+            )
+          %>
+        </div>        
                  
-        <div class="field">          
+        <!-- <div class="field">          
           <% if signed_in? %>
             <%= select_tag(
                     :collection,
@@ -21,10 +33,10 @@
                 )
             %>
           <% end %>          
-        </div>
+        </div> -->
         
         <div class="actions">
-            
+            <div id="btnSave"><%=image_tag "main/btnsave.png" %></div>
         </div>                              
       </div>
     </div>
