--- a/app/views/main/_add_collection_dialog.html.erb
+++ b/app/views/main/_add_collection_dialog.html.erb
@@ -10,33 +10,18 @@
 
         <div class="field">
           <input id="ipCreateCol" type="text" placeholder="Create a new collection" class="form-control" autofocus>
-          <button id="btnAdd">Add</button>                  
+          <button id="btnAdd" data-video-id="{{id}}">Add</button>                  
         </div>
 
         <div class="field">
           <%= select_tag(
-              :collection, options_for_select(@current_user_collections), class: "add-collection"
+              :collection, options_for_select([["Add to Collection", "default"]] + @current_user_collections), class: "add-collection form-control"
             )
           %>
-        </div>        
-                 
-        <!-- <div class="field">          
-          <% if signed_in? %>
-            <%= select_tag(
-                    :collection,
-                    options_for_select(
-                        [["Add to Collection", "default"]] +
-                            @current_user_collections +
-                            [["New Collection", "new"]]
-                ),
-                class: "add-collection"
-                )
-            %>
-          <% end %>          
-        </div> -->
+        </div>                         
         
         <div class="actions">
-            <div id="btnSave"><%=image_tag "main/btnsave.png" %></div>
+            <div id="btnSave" data-video-id="{{id}}"><%=image_tag "main/btnsave.png" %></div>
         </div>                              
       </div>
     </div>
