--- a/app/views/main/_video_dialog.html.erb
+++ b/app/views/main/_video_dialog.html.erb
@@ -34,7 +34,7 @@
               <div class="btnLike" data-video-id="{{id}}">
                 <%=image_tag "main/video_player/likebtn.png" %>
               </div>
-              <div class="btnAdd">
+              <div class="btnAdd" data-toggle="modal" data-target="#collectionModal">
                 <%=image_tag "main/video_player/addbtn.png" %>
               </div>
             </div>
