--- a/app/views/main/_collection_list.html.erb
+++ b/app/views/main/_collection_list.html.erb
@@ -11,13 +11,13 @@
 		</div>		
 	</div>
 	<div class="list-info">	  
-      	<div class="titleD">Rising Idols</div>              
+      	<div class="titleD">{{name}}</div>              
       	<div class="row">        	
           <div class="user col-md-6">By {{current_user.email}}</div>
           <div class="register_date col-md-6">/ 2011-10-18</div>          
         </div>
         <div class="row">        	
-	        <div class="numvideos"><span class="numvalue">16</span> Videos</div>	        
+	        <!-- <div class="numvideos"><span class="numvalue">16</span> Videos</div>	         -->
         </div>        
     </div>      
 
