--- a/app/views/main/_left_mypage_menu.html.erb
+++ b/app/views/main/_left_mypage_menu.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(@ajax_path, name: 'likeform') do %>
+<%= form_tag(@ajax_path, name: 'mypageform') do %>
 <div id="left-mypage-menu">
 	<input id="menutype" value=1 type="hidden">
 	<input id="page" name="page" value=1 type="hidden">
