--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -141,6 +141,10 @@ input.form-control {
 	color: rgb(199,203,213);
 }
 
+.menu_item a {
+	color: rgb(199,203,213);
+}
+
 .menu_item a:visited {
 	font-size: 16px;
 	color: rgb(199,203,213);
