almost complete to collection without thumb

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -590,6 +590,12 @@ input.form-control {
 	height: 210px;
 }
 
+.vlist .box .overlay.collection{
+	line-height: 205px;
+    font-size: 20px;
+    color: #fff;
+}
+
 .vlist .list-info {
 	display: inline-block;
 	position: absolute;
